src/libqgraphicsscene.h

typedef struct QBrush QBrush;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QGraphicsLineItem QGraphicsLineItem;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsPixmapItem QGraphicsPixmapItem;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneHelpEvent QGraphicsSceneHelpEvent;
typedef struct QGraphicsSimpleTextItem QGraphicsSimpleTextItem;
typedef struct QGraphicsTextItem QGraphicsTextItem;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLineF QLineF;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPalette QPalette;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QStyle QStyle;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QGraphicsScene* QGraphicsScene_new();
QGraphicsScene* QGraphicsScene_new2(QRectF* sceneRect);
QGraphicsScene* QGraphicsScene_new3(double x, double y, double width, double height);
QGraphicsScene* QGraphicsScene_new4(QObject* parent);
QGraphicsScene* QGraphicsScene_new5(QRectF* sceneRect, QObject* parent);
QGraphicsScene* QGraphicsScene_new6(double x, double y, double width, double height, QObject* parent);
QMetaObject* QGraphicsScene_MetaObject(const QGraphicsScene* self);
void* QGraphicsScene_Metacast(QGraphicsScene* self, const char* param1);
int QGraphicsScene_Metacall(QGraphicsScene* self, int param1, int param2, void** param3);
libqt_string QGraphicsScene_Tr(const char* s);
QRectF* QGraphicsScene_SceneRect(const QGraphicsScene* self);
double QGraphicsScene_Width(const QGraphicsScene* self);
double QGraphicsScene_Height(const QGraphicsScene* self);
void QGraphicsScene_SetSceneRect(QGraphicsScene* self, QRectF* rect);
void QGraphicsScene_SetSceneRect2(QGraphicsScene* self, double x, double y, double w, double h);
void QGraphicsScene_Render(QGraphicsScene* self, QPainter* painter);
int QGraphicsScene_ItemIndexMethod(const QGraphicsScene* self);
void QGraphicsScene_SetItemIndexMethod(QGraphicsScene* self, int method);
int QGraphicsScene_BspTreeDepth(const QGraphicsScene* self);
void QGraphicsScene_SetBspTreeDepth(QGraphicsScene* self, int depth);
QRectF* QGraphicsScene_ItemsBoundingRect(const QGraphicsScene* self);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_Items(const QGraphicsScene* self);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_ItemsWithPos(const QGraphicsScene* self, QPointF* pos);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_ItemsWithRect(const QGraphicsScene* self, QRectF* rect);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_ItemsWithPath(const QGraphicsScene* self, QPainterPath* path);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_CollidingItems(const QGraphicsScene* self, QGraphicsItem* item);
QGraphicsItem* QGraphicsScene_ItemAt(const QGraphicsScene* self, QPointF* pos, QTransform* deviceTransform);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_Items2(const QGraphicsScene* self, double x, double y, double w, double h, int mode, int order);
QGraphicsItem* QGraphicsScene_ItemAt2(const QGraphicsScene* self, double x, double y, QTransform* deviceTransform);
libqt_list /* of QGraphicsItem* */ QGraphicsScene_SelectedItems(const QGraphicsScene* self);
QPainterPath* QGraphicsScene_SelectionArea(const QGraphicsScene* self);
void QGraphicsScene_SetSelectionArea(QGraphicsScene* self, QPainterPath* path, QTransform* deviceTransform);
void QGraphicsScene_SetSelectionAreaWithPath(QGraphicsScene* self, QPainterPath* path);
QGraphicsItemGroup* QGraphicsScene_CreateItemGroup(QGraphicsScene* self, libqt_list /* of QGraphicsItem* */ items);
void QGraphicsScene_DestroyItemGroup(QGraphicsScene* self, QGraphicsItemGroup* group);
void QGraphicsScene_AddItem(QGraphicsScene* self, QGraphicsItem* item);
QGraphicsEllipseItem* QGraphicsScene_AddEllipse(QGraphicsScene* self, QRectF* rect);
QGraphicsLineItem* QGraphicsScene_AddLine(QGraphicsScene* self, QLineF* line);
QGraphicsPathItem* QGraphicsScene_AddPath(QGraphicsScene* self, QPainterPath* path);
QGraphicsPixmapItem* QGraphicsScene_AddPixmap(QGraphicsScene* self, QPixmap* pixmap);
QGraphicsRectItem* QGraphicsScene_AddRect(QGraphicsScene* self, QRectF* rect);
QGraphicsTextItem* QGraphicsScene_AddText(QGraphicsScene* self, libqt_string text);
QGraphicsSimpleTextItem* QGraphicsScene_AddSimpleText(QGraphicsScene* self, libqt_string text);
QGraphicsProxyWidget* QGraphicsScene_AddWidget(QGraphicsScene* self, QWidget* widget);
QGraphicsEllipseItem* QGraphicsScene_AddEllipse2(QGraphicsScene* self, double x, double y, double w, double h);
QGraphicsLineItem* QGraphicsScene_AddLine2(QGraphicsScene* self, double x1, double y1, double x2, double y2);
QGraphicsRectItem* QGraphicsScene_AddRect2(QGraphicsScene* self, double x, double y, double w, double h);
void QGraphicsScene_RemoveItem(QGraphicsScene* self, QGraphicsItem* item);
QGraphicsItem* QGraphicsScene_FocusItem(const QGraphicsScene* self);
void QGraphicsScene_SetFocusItem(QGraphicsScene* self, QGraphicsItem* item);
bool QGraphicsScene_HasFocus(const QGraphicsScene* self);
void QGraphicsScene_SetFocus(QGraphicsScene* self);
void QGraphicsScene_ClearFocus(QGraphicsScene* self);
void QGraphicsScene_SetStickyFocus(QGraphicsScene* self, bool enabled);
bool QGraphicsScene_StickyFocus(const QGraphicsScene* self);
QGraphicsItem* QGraphicsScene_MouseGrabberItem(const QGraphicsScene* self);
QBrush* QGraphicsScene_BackgroundBrush(const QGraphicsScene* self);
void QGraphicsScene_SetBackgroundBrush(QGraphicsScene* self, QBrush* brush);
QBrush* QGraphicsScene_ForegroundBrush(const QGraphicsScene* self);
void QGraphicsScene_SetForegroundBrush(QGraphicsScene* self, QBrush* brush);
QVariant* QGraphicsScene_InputMethodQuery(const QGraphicsScene* self, int query);
libqt_list /* of QGraphicsView* */ QGraphicsScene_Views(const QGraphicsScene* self);
void QGraphicsScene_Update(QGraphicsScene* self, double x, double y, double w, double h);
void QGraphicsScene_Invalidate(QGraphicsScene* self, double x, double y, double w, double h);
QStyle* QGraphicsScene_Style(const QGraphicsScene* self);
void QGraphicsScene_SetStyle(QGraphicsScene* self, QStyle* style);
QFont* QGraphicsScene_Font(const QGraphicsScene* self);
void QGraphicsScene_SetFont(QGraphicsScene* self, QFont* font);
QPalette* QGraphicsScene_Palette(const QGraphicsScene* self);
void QGraphicsScene_SetPalette(QGraphicsScene* self, QPalette* palette);
bool QGraphicsScene_IsActive(const QGraphicsScene* self);
QGraphicsItem* QGraphicsScene_ActivePanel(const QGraphicsScene* self);
void QGraphicsScene_SetActivePanel(QGraphicsScene* self, QGraphicsItem* item);
QGraphicsWidget* QGraphicsScene_ActiveWindow(const QGraphicsScene* self);
void QGraphicsScene_SetActiveWindow(QGraphicsScene* self, QGraphicsWidget* widget);
bool QGraphicsScene_SendEvent(QGraphicsScene* self, QGraphicsItem* item, QEvent* event);
double QGraphicsScene_MinimumRenderSize(const QGraphicsScene* self);
void QGraphicsScene_SetMinimumRenderSize(QGraphicsScene* self, double minSize);
bool QGraphicsScene_FocusOnTouch(const QGraphicsScene* self);
void QGraphicsScene_SetFocusOnTouch(QGraphicsScene* self, bool enabled);
void QGraphicsScene_Update2(QGraphicsScene* self);
void QGraphicsScene_Invalidate2(QGraphicsScene* self);
void QGraphicsScene_Advance(QGraphicsScene* self);
void QGraphicsScene_ClearSelection(QGraphicsScene* self);
void QGraphicsScene_Clear(QGraphicsScene* self);
bool QGraphicsScene_Event(QGraphicsScene* self, QEvent* event);
bool QGraphicsScene_EventFilter(QGraphicsScene* self, QObject* watched, QEvent* event);
void QGraphicsScene_ContextMenuEvent(QGraphicsScene* self, QGraphicsSceneContextMenuEvent* event);
void QGraphicsScene_DragEnterEvent(QGraphicsScene* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsScene_DragMoveEvent(QGraphicsScene* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsScene_DragLeaveEvent(QGraphicsScene* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsScene_DropEvent(QGraphicsScene* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsScene_FocusInEvent(QGraphicsScene* self, QFocusEvent* event);
void QGraphicsScene_FocusOutEvent(QGraphicsScene* self, QFocusEvent* event);
void QGraphicsScene_HelpEvent(QGraphicsScene* self, QGraphicsSceneHelpEvent* event);
void QGraphicsScene_KeyPressEvent(QGraphicsScene* self, QKeyEvent* event);
void QGraphicsScene_KeyReleaseEvent(QGraphicsScene* self, QKeyEvent* event);