src/qt/libqgraphicsscene.bf

extension CQt
{
	[LinkName("QGraphicsScene_new")]
	public static extern void* QGraphicsScene_new();
	[LinkName("QGraphicsScene_new2")]
	public static extern void* QGraphicsScene_new2(void* sceneRect);
	[LinkName("QGraphicsScene_new3")]
	public static extern void* QGraphicsScene_new3(double x, double y, double width, double height);
	[LinkName("QGraphicsScene_new4")]
	public static extern void* QGraphicsScene_new4(void* parent);
	[LinkName("QGraphicsScene_new5")]
	public static extern void* QGraphicsScene_new5(void* sceneRect, void* parent);
	[LinkName("QGraphicsScene_new6")]
	public static extern void* QGraphicsScene_new6(double x, double y, double width, double height, void* parent);
	[LinkName("QGraphicsScene_MetaObject")]
	public static extern void* QGraphicsScene_MetaObject(void* c_this);
	[LinkName("QGraphicsScene_Metacast")]
	public static extern void* QGraphicsScene_Metacast(void* c_this, char8* param1);
	[LinkName("QGraphicsScene_Metacall")]
	public static extern int32 QGraphicsScene_Metacall(void* c_this, int64 param1, int32 param2, void* param3);
	[LinkName("QGraphicsScene_Tr")]
	public static extern libqt_string QGraphicsScene_Tr(char8* s);
	[LinkName("QGraphicsScene_SceneRect")]
	public static extern void QGraphicsScene_SceneRect(void* c_this);
	[LinkName("QGraphicsScene_Width")]
	public static extern double QGraphicsScene_Width(void* c_this);
	[LinkName("QGraphicsScene_Height")]
	public static extern double QGraphicsScene_Height(void* c_this);
	[LinkName("QGraphicsScene_SetSceneRect")]
	public static extern void QGraphicsScene_SetSceneRect(void* c_this, void* rect);
	[LinkName("QGraphicsScene_SetSceneRect2")]
	public static extern void QGraphicsScene_SetSceneRect2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsScene_Render")]
	public static extern void QGraphicsScene_Render(void* c_this, void* painter);
	[LinkName("QGraphicsScene_ItemIndexMethod")]
	public static extern int64 QGraphicsScene_ItemIndexMethod(void* c_this);
	[LinkName("QGraphicsScene_SetItemIndexMethod")]
	public static extern void QGraphicsScene_SetItemIndexMethod(void* c_this, int64 method);
	[LinkName("QGraphicsScene_BspTreeDepth")]
	public static extern int32 QGraphicsScene_BspTreeDepth(void* c_this);
	[LinkName("QGraphicsScene_SetBspTreeDepth")]
	public static extern void QGraphicsScene_SetBspTreeDepth(void* c_this, int32 depth);
	[LinkName("QGraphicsScene_ItemsBoundingRect")]
	public static extern void QGraphicsScene_ItemsBoundingRect(void* c_this);
	[LinkName("QGraphicsScene_Items")]
	public static extern void*[] QGraphicsScene_Items(void* c_this);
	[LinkName("QGraphicsScene_ItemsWithPos")]
	public static extern void*[] QGraphicsScene_ItemsWithPos(void* c_this, void* pos);
	[LinkName("QGraphicsScene_ItemsWithRect")]
	public static extern void*[] QGraphicsScene_ItemsWithRect(void* c_this, void* rect);
	[LinkName("QGraphicsScene_ItemsWithPath")]
	public static extern void*[] QGraphicsScene_ItemsWithPath(void* c_this, void* path);
	[LinkName("QGraphicsScene_Items2")]
	public static extern void*[] QGraphicsScene_Items2(void* c_this, double x, double y, double w, double h, int64 mode, int64 order);
	[LinkName("QGraphicsScene_CollidingItems")]
	public static extern void*[] QGraphicsScene_CollidingItems(void* c_this, void* item);
	[LinkName("QGraphicsScene_ItemAt")]
	public static extern void* QGraphicsScene_ItemAt(void* c_this, void* pos, void* deviceTransform);
	[LinkName("QGraphicsScene_ItemAt2")]
	public static extern void* QGraphicsScene_ItemAt2(void* c_this, double x, double y, void* deviceTransform);
	[LinkName("QGraphicsScene_SelectedItems")]
	public static extern void*[] QGraphicsScene_SelectedItems(void* c_this);
	[LinkName("QGraphicsScene_SelectionArea")]
	public static extern void QGraphicsScene_SelectionArea(void* c_this);
	[LinkName("QGraphicsScene_SetSelectionArea")]
	public static extern void QGraphicsScene_SetSelectionArea(void* c_this, void* path, void* deviceTransform);
	[LinkName("QGraphicsScene_SetSelectionAreaWithPath")]
	public static extern void QGraphicsScene_SetSelectionAreaWithPath(void* c_this, void* path);
	[LinkName("QGraphicsScene_CreateItemGroup")]
	public static extern void* QGraphicsScene_CreateItemGroup(void* c_this, void*[] items);
	[LinkName("QGraphicsScene_DestroyItemGroup")]
	public static extern void QGraphicsScene_DestroyItemGroup(void* c_this, void* group);
	[LinkName("QGraphicsScene_AddItem")]
	public static extern void QGraphicsScene_AddItem(void* c_this, void* item);
	[LinkName("QGraphicsScene_AddEllipse")]
	public static extern void* QGraphicsScene_AddEllipse(void* c_this, void* rect);
	[LinkName("QGraphicsScene_AddLine")]
	public static extern void* QGraphicsScene_AddLine(void* c_this, void* line);
	[LinkName("QGraphicsScene_AddPath")]
	public static extern void* QGraphicsScene_AddPath(void* c_this, void* path);
	[LinkName("QGraphicsScene_AddPixmap")]
	public static extern void* QGraphicsScene_AddPixmap(void* c_this, void* pixmap);
	[LinkName("QGraphicsScene_AddRect")]
	public static extern void* QGraphicsScene_AddRect(void* c_this, void* rect);
	[LinkName("QGraphicsScene_AddText")]
	public static extern void* QGraphicsScene_AddText(void* c_this, libqt_string text);
	[LinkName("QGraphicsScene_AddSimpleText")]
	public static extern void* QGraphicsScene_AddSimpleText(void* c_this, libqt_string text);
	[LinkName("QGraphicsScene_AddWidget")]
	public static extern void* QGraphicsScene_AddWidget(void* c_this, void* widget);
	[LinkName("QGraphicsScene_AddEllipse2")]
	public static extern void* QGraphicsScene_AddEllipse2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsScene_AddLine2")]
	public static extern void* QGraphicsScene_AddLine2(void* c_this, double x1, double y1, double x2, double y2);
	[LinkName("QGraphicsScene_AddRect2")]
	public static extern void* QGraphicsScene_AddRect2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsScene_RemoveItem")]
	public static extern void QGraphicsScene_RemoveItem(void* c_this, void* item);
	[LinkName("QGraphicsScene_FocusItem")]
	public static extern void* QGraphicsScene_FocusItem(void* c_this);
	[LinkName("QGraphicsScene_SetFocusItem")]
	public static extern void QGraphicsScene_SetFocusItem(void* c_this, void* item);
	[LinkName("QGraphicsScene_HasFocus")]
	public static extern bool QGraphicsScene_HasFocus(void* c_this);
	[LinkName("QGraphicsScene_SetFocus")]
	public static extern void QGraphicsScene_SetFocus(void* c_this);
	[LinkName("QGraphicsScene_ClearFocus")]
	public static extern void QGraphicsScene_ClearFocus(void* c_this);
	[LinkName("QGraphicsScene_SetStickyFocus")]
	public static extern void QGraphicsScene_SetStickyFocus(void* c_this, bool enabled);
	[LinkName("QGraphicsScene_StickyFocus")]
	public static extern bool QGraphicsScene_StickyFocus(void* c_this);
	[LinkName("QGraphicsScene_MouseGrabberItem")]
	public static extern void* QGraphicsScene_MouseGrabberItem(void* c_this);
	[LinkName("QGraphicsScene_BackgroundBrush")]
	public static extern void QGraphicsScene_BackgroundBrush(void* c_this);
	[LinkName("QGraphicsScene_SetBackgroundBrush")]
	public static extern void QGraphicsScene_SetBackgroundBrush(void* c_this, void* brush);
	[LinkName("QGraphicsScene_ForegroundBrush")]
	public static extern void QGraphicsScene_ForegroundBrush(void* c_this);
	[LinkName("QGraphicsScene_SetForegroundBrush")]
	public static extern void QGraphicsScene_SetForegroundBrush(void* c_this, void* brush);
	[LinkName("QGraphicsScene_InputMethodQuery")]
	public static extern void QGraphicsScene_InputMethodQuery(void* c_this, int64 query);
	[LinkName("QGraphicsScene_Views")]
	public static extern void*[] QGraphicsScene_Views(void* c_this);
	[LinkName("QGraphicsScene_Update")]
	public static extern void QGraphicsScene_Update(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsScene_Invalidate")]
	public static extern void QGraphicsScene_Invalidate(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsScene_Style")]
	public static extern void* QGraphicsScene_Style(void* c_this);
	[LinkName("QGraphicsScene_SetStyle")]
	public static extern void QGraphicsScene_SetStyle(void* c_this, void* style);
	[LinkName("QGraphicsScene_Font")]
	public static extern void QGraphicsScene_Font(void* c_this);
	[LinkName("QGraphicsScene_SetFont")]
	public static extern void QGraphicsScene_SetFont(void* c_this, void* font);
	[LinkName("QGraphicsScene_Palette")]
	public static extern void QGraphicsScene_Palette(void* c_this);
	[LinkName("QGraphicsScene_SetPalette")]
	public static extern void QGraphicsScene_SetPalette(void* c_this, void* palette);
	[LinkName("QGraphicsScene_IsActive")]
	public static extern bool QGraphicsScene_IsActive(void* c_this);
	[LinkName("QGraphicsScene_ActivePanel")]
	public static extern void* QGraphicsScene_ActivePanel(void* c_this);
	[LinkName("QGraphicsScene_SetActivePanel")]
	public static extern void QGraphicsScene_SetActivePanel(void* c_this, void* item);
	[LinkName("QGraphicsScene_ActiveWindow")]
	public static extern void* QGraphicsScene_ActiveWindow(void* c_this);
	[LinkName("QGraphicsScene_SetActiveWindow")]
	public static extern void QGraphicsScene_SetActiveWindow(void* c_this, void* widget);
	[LinkName("QGraphicsScene_SendEvent")]
	public static extern bool QGraphicsScene_SendEvent(void* c_this, void* item, void* event);
	[LinkName("QGraphicsScene_MinimumRenderSize")]
	public static extern double QGraphicsScene_MinimumRenderSize(void* c_this);
	[LinkName("QGraphicsScene_SetMinimumRenderSize")]
	public static extern void QGraphicsScene_SetMinimumRenderSize(void* c_this, double minSize);
	[LinkName("QGraphicsScene_FocusOnTouch")]
	public static extern bool QGraphicsScene_FocusOnTouch(void* c_this);
	[LinkName("QGraphicsScene_SetFocusOnTouch")]
	public static extern void QGraphicsScene_SetFocusOnTouch(void* c_this, bool enabled);
	[LinkName("QGraphicsScene_Update2")]
	public static extern void QGraphicsScene_Update2(void* c_this);
	[LinkName("QGraphicsScene_Invalidate2")]
	public static extern void QGraphicsScene_Invalidate2(void* c_this);
	[LinkName("QGraphicsScene_Advance")]
	public static extern void QGraphicsScene_Advance(void* c_this);
	[LinkName("QGraphicsScene_ClearSelection")]
	public static extern void QGraphicsScene_ClearSelection(void* c_this);
	[LinkName("QGraphicsScene_Clear")]
	public static extern void QGraphicsScene_Clear(void* c_this);
	[LinkName("QGraphicsScene_Event")]
	public static extern bool QGraphicsScene_Event(void* c_this, void* event);
	[LinkName("QGraphicsScene_EventFilter")]
	public static extern bool QGraphicsScene_EventFilter(void* c_this, void* watched, void* event);
	[LinkName("QGraphicsScene_ContextMenuEvent")]
	public static extern void QGraphicsScene_ContextMenuEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_DragEnterEvent")]
	public static extern void QGraphicsScene_DragEnterEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_DragMoveEvent")]
	public static extern void QGraphicsScene_DragMoveEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_DragLeaveEvent")]
	public static extern void QGraphicsScene_DragLeaveEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_DropEvent")]
	public static extern void QGraphicsScene_DropEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_FocusInEvent")]
	public static extern void QGraphicsScene_FocusInEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_FocusOutEvent")]
	public static extern void QGraphicsScene_FocusOutEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_HelpEvent")]
	public static extern void QGraphicsScene_HelpEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_KeyPressEvent")]
	public static extern void QGraphicsScene_KeyPressEvent(void* c_this, void* event);
	[LinkName("QGraphicsScene_KeyReleaseEvent")]
	public static extern void QGraphicsScene_KeyReleaseEvent(void* c_this, void* event);
